styles/style.css
:root {
  --bgcolor: #66fcf1;
  --color: #c5c6c7;
  --center: center;
}

/* fix gallery images and videos merging almost entirely */
html {
  min-width: 700px;
  position: relative;
}
/*-------------------------------------------------------*/
body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  font-style: normal;
  background-color: #0b0c10;
  margin: 0;
  padding: 0;
}

p {
  font-size: 24px;
}

a {
  text-decoration: none;
  color: black;
}

a.active-page {
  background-color: var(--color);
  color: var(--bgcolor);
}
a:hover {
  color: white;
}

.btn {
  border: 2px black solid;
  border-radius: 20%;
  background-color: #1a1a1d;
  color: var(--bgcolor);
  padding: 3px;
}

.index-header {
  display: flex;
  background-color: var(--bgcolor);
  width: 100vw;
  margin-top: 50px;
}
#header-img {
  display: inline-block;
  width: 10vw;
  height: auto;
}

#main-header {
  top: 20px;
  padding: 10px 0;
  text-align: var(--center);
}

.navbar {
  margin: 0;
  padding: 0;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  background-color: var(--bgcolor);
}

#navbar ul {
  display: inline-block;
  list-style: none;
  font-size: 20px;
}

#navbar li {
  display: inline;
  padding-right: 20px;
}
.main-section {
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: var(--center);
  width: 100%;
  align-items: var(--center);
  height: 100vh;
  color: var(--bgcolor);
}

.secondary-header {
  font-size: 56px;
  color: var(--color);
}

.description {
  text-align: var(--center);
  width: 80%;
  margin: auto;
  overflow-wrap: normal;
}

.site-links {
  display: grid;
  justify-content: var(--center);
  margin-bottom: 50px;
  grid-template-columns: 100px 100px 100px;
  grid-column-gap: 10px;
}

.toPage {
  background-color: var(--bgcolor);
  margin-top: 10px;
  text-align: var(--center);
  border-radius: 25%;
}

.gallery {
  padding: 5px;
  margin: 10px 20px 10px 20px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: var(--center);
  align-content: var(--center);
  height: 100vh;
}

.img {
  border: 3px var(--bgcolor) solid;
  margin: auto;
  width: 50vmin;
  /*width:auto;*/
}

#gallery-header {
  text-align: var(--center);
  color: var(--color);
  font-size: 48px;
  font-weight: 600;
  margin-top: 20px;
}

#vid-section {
  display: flex;
  justify-content: var(--center);
  justify-content: space-between;
  align-items: var(--center);
  flex-wrap: wrap;
  width: 100%;
  margin-bottom: 20%;
  z-index: 0;
}

.video-spread {
  margin: auto;
}

.footer {
  background-color: var(--color);
  padding: 50px;
  text-align: var(--center);
}

.media-link {
  margin: 0 10px;
  color: var(--bgcolor);
  font-size: 24px;
}

.sub-form {
  background-color: #0b0c10;
  margin-left: 50px;
  margin-bottom: 25%;
  float: left;
}

aside {
  color: white;
}

form ul {
  list-style: none;
  font-size: 30px;
  margin: 20px 150px;
}

form li {
  color: var(--bgcolor);
}

legend {
  color: var(--bgcolor);
  background-color: black;
  font-size: 20px;
  padding: 3px 6px;
}

form {
  display: table;
}

label {
  display: table-cell;
}

input {
  display: table-cell;
}

.con-foot {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  padding: 0;
}

h3.secondary-header {
  text-align: var(--center);
  color: var(--color);
}

.products {
  display: flex;
  width: 80%;
  justify-content: space-around;
  margin: auto 100px;
  flex-wrap: wrap;
  border: black 3px solid;
}

.type-1 {
  display: flex;
  justify-content: var(--center);
  flex-direction: column;
  border-right: 3px solid black;
  padding: 0 25px;
  flex: 1;
}

.type-2 {
  display: flex;
  justify-content: var(--center);
  flex-direction: column;
  border-right: 3px solid black;
  padding: 0 25px;
  flex: 1;
}

.type-3 {
  display: flex;
  justify-content: var(--center);
  flex-direction: column;
  padding: 0 25px;
  flex: 1;
}

.category-description {
  text-align: var(--center);
  background-color: var(--bgcolor);
  color: #1a1a1d;
}

.product {
  display: inline-block;
  height: 20vh;
}

.prod-description {
  color: var(--bgcolor);
}

.anim {
  float: right;
  margin-right: 30%;
  margin-bottom: 20%;
  margin-left: 0;
  width: 100px;
  height: 100px;
  position: relative;
  animation-name: subscribe;
  animation-duration: 5s;
  animation-iteration-count: infinite;
}

@keyframes subscribe {
  0% {
    color: red;
    left: 0px;
    top: 0px;
  }

  50% {
    color: blue;
    left: 200px;
    top: 0px;
  }

  100% {
    color: red;
    left: 0px;
    top: 0px;
  }
}

